canary/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-myapp
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: saumik8763/my-custom-nginx:v2
          ports:
          - containerPort: 80
